# Addefan_coding-agent-megaschool-2026

./: Dockerfile  README.md  action.yaml  main.py  pyproject.toml  settings.py
code/: agent.py  tools.py  utils.py
