[project]
name = "coding-agent-megaschool-2026"
version = "0.1.0"
description = "An agent-based system with code agent and review agent for automating the SDLC in GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.7",
    "openai>=2.16.0",
    "pydantic-settings>=2.12.0",
    "pygithub>=2.8.1",
]
